--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.4.4",
     "@react-navigation/drawer": "^7.8.1",
     "clsx": "^2.1.1",
     "expo": "~54.0.33",
